add state randing CurrentColorFragment.kt

--- a/mvvm-foundation/app/src/main/res/layout/fragment_change_color.xml
+++ b/mvvm-foundation/app/src/main/res/layout/fragment_change_color.xml
@@ -38,4 +38,7 @@
         app:layout_constraintEnd_toStartOf="@id/saveButton"/>
 
 
+    <include layout="@layout/part_result" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
