add state randing ChangeColorFragment.kt

--- a/mvvm-foundation/app/src/main/res/layout/fragment_change_color.xml
+++ b/mvvm-foundation/app/src/main/res/layout/fragment_change_color.xml
@@ -40,5 +40,14 @@
 
     <include layout="@layout/part_result" />
 
+    <ProgressBar
+        android:id="@+id/changeProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
